--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,7 @@
 <div class="container container-fluid bg-primary text-white">
     <nav class="navbar navbar-default">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#/">Space Invaders - Version 2.1 $$$$$$$  </a>
+        <a class="navbar-brand" href="#/">Space Invaders - Version 3.0 ****** </a>
       </div>
     </nav>
     <div ng-view></div>
